#--------------------------------------------------------------------------
# File and Version Information:
#  $Id$
#
# Description:
#  ChangeLog file for package PSCalib
#------------------------------------------------------------------------

Package author: Mikhail S. Dubrovin

Please describe any modifications that you made to the package in the
reverse time order.

Tag: V00-02-78
2016-06-13 Mikhail S. Dubrovin
- force all methods to return mask of dtype=np.uint8
M       src/GlobalUtils.py
M       src/SegGeometryCspad2x1V1.py
M       src/SegGeometryEpix100V1.py
M       src/SegGeometryMatrixV1.py
	
Tag: V00-02-77
2016-06-06 Mikhail S. Dubrovin
- GeometryAccess.py/h/cpp - add methods get_pixel_xy_at_z, get_pixel_xy_inds_at_z PSAS-148

Tag: V00-02-76
2016-05-18 Mikhail S. Dubrovin
- correct comments for word "bond"
	
Tag: V00-02-75
2016-05-18 Mikhail S. Dubrovin
- GlobalUtils.py - add methods mask_neighbors, mask_edges and their tests.

Tag: V00-02-74
2016-05-17 Mikhail S. Dubrovin
- Add mask of eight neighbours of unbound pixel if mbits += 16 
M       src/GeometryAccess.py
M       src/GeometryObject.py
M       src/SegGeometryCspad2x1V1.py
	
Tag: V00-02-73
2016-05-05 Mikhail S. Dubrovin
- CalibFileFinder.make_calib_file_name - add protection, create subdirectory, change signature PSAS-148
- GlobalUtils.py - add method create_directory
	
Tag: V00-02-72
2016-05-05 Mikhail S. Dubrovin
- CalibFileFinder.py - add methods makeCalibFileName, find_calib_file and make_calib_file_name PSAS-148

Tag: V00-02-71
2016-04-27 Mikhail S. Dubrovin
- GeometryObject.py change format for angles from %6.1f to %8.3f and test in GeometryAccess
	
Tag: V00-02-70
2016-04-25 Mikhail S. Dubrovin
- in NDArrIO.save_txt add SHAPE and DATATYPE.
	
Tag: V00-02-69
2016-04-14 Mikhail S. Dubrovin
- CalibParsBaseEpix100aV1 - change default common mode parameters from (4,1,20,0) to (4,6,30,30) PSAS-147

Tag: V00-02-68
2016-03-31 Mikhail S. Dubrovin